<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/buttons"
        android:layout_height="0dp">

        <HorizontalScrollView
            android:clipToPadding="false"
            android:paddingEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">
            <TextView
                android:id="@+id/result"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="85sp"
                android:fontFamily="monospace"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />
        </HorizontalScrollView>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.9">
        <LinearLayout
            android:id="@+id/firstRow"
            style="@style/HorizontalLinearLayoutStyle">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear_button"
                android:text="@string/all_clear"
                style="@style/OtherButtonStyle"
                android:textSize="24sp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/change_sign_button"
                android:text="@string/change_sign"
                style="@style/OtherButtonStyle"
                android:textSize="24sp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/percent_button"
                android:text="@string/percent"
                style="@style/OtherButtonStyle"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/division_button"
                android:text="@string/division"
                style="@style/OperationButtonStyle"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/secondRow"
            style="@style/HorizontalLinearLayoutStyle">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/seven_button"
                android:text="@string/seven"
                style="@style/DigitButtonStyle"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/eight_button"
                android:text="@string/eight"
                style="@style/DigitButtonStyle"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/nine_button"
                android:text="@string/nine"
                style="@style/DigitButtonStyle"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiplication_button"
                android:text="@string/multiplication"
                style="@style/OperationButtonStyle"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/thirdRow"
            style="@style/HorizontalLinearLayoutStyle">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/four_button"
                android:text="@string/four"
                style="@style/DigitButtonStyle"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/five_button"
                android:text="@string/five"
                style="@style/DigitButtonStyle"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/six_button"
                android:text="@string/six"
                style="@style/DigitButtonStyle"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/minus_button"
                android:text="@string/minus"
                style="@style/OperationButtonStyle"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fourthRow"
            style="@style/HorizontalLinearLayoutStyle">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/one_button"
                android:text="@string/one"
                style="@style/DigitButtonStyle"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/two_button"
                android:text="@string/two"
                style="@style/DigitButtonStyle"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/three_button"
                android:text="@string/three"
                style="@style/DigitButtonStyle"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus_button"
                android:text="@string/plus"
                style="@style/OperationButtonStyle"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fifthRow"
            style="@style/LastHorizontalLinearLayoutStyle">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/zero_button"
                android:text="@string/zero"
                android:textAlignment="textStart"
                android:paddingHorizontal="35dp"
                android:layout_weight="1"
                style="@style/DigitButtonStyle"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/comma_button"
                android:text="@string/comma"
                style="@style/DigitButtonStyle"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/equal_button"
                android:text="@string/equal"
                style="@style/OperationButtonStyle"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>